[metadata]
name = glyth-graph
version = 0.0.1
author = ivanl.exe
author_email = ivan.exe@pm.me
description = A simple, yet versatile, package for graphing equations on a 2-dimensional text canvas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivanl-exe/glyph-graph
project_urls =
    Bug Tracker = https://github.com/ivanl-exe/glyph-graph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src